<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/button_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/title_account" />
        <item
            android:id="@+id/button_contacts"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/title_contacts" />
        <item
            android:id="@+id/button_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/title_maps" />

    </group>

    <item android:title="@string/title_subitems">

        <menu>
            <item
                android:id="@+id/button_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/action_logout" />
        </menu>
    </item>


</menu>
