<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.unsigned.login.LoginFragment">



    <ImageView
        android:layout_margin="30dp"
        android:src="@drawable/dami_log"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <include
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        layout="@layout/hint_view"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="20dp"
        android:hint="@string/hint_email"
        android:background="@drawable/borders_cornered"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:background="@null"
            android:id="@+id/input_email"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="20dp"
        android:hint="@string/hint_password"
        android:layout_marginEnd="20dp"
        android:background="@drawable/borders_cornered"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:background="@null"
            android:id="@+id/input_password"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>




    <Button
        android:enabled="false"
        android:id="@+id/button_login"
        android:text="@string/action_login"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    
    <Button
        android:text="@string/action_register"
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>